feat(care): F-3.6 영양성분 현황 구현
